(lang dune 3.7)
(name wayland-proxy-virtwl)
(formatting disabled)
(generate_opam_files true)
(source (github talex5/wayland-proxy-virtwl))
(authors "talex5@gmail.com")
(maintainers "talex5@gmail.com")
(package
 (name wayland-proxy-virtwl)
 (synopsis "Proxy Wayland connections across the VM boundary")
 (depends
   (logs (>= 0.7.0))
   (cmdliner (>= 1.1.0))
   (cstruct (>= 6.0.0))
   (eio_main (>= 0.9))
   (ppx_cstruct (>= 6.0.0))
   (ocaml (>= 5.0.0))
   (fmt (>= 0.8.9))
   conf-pkg-config
   (wayland (>= 1.1))))
