(lang dune 3.11)
(name wayland-proxy-virtwl)
(formatting disabled)
(generate_opam_files true)
(source (github talex5/wayland-proxy-virtwl))
(authors "talex5@gmail.com")
(maintainers "talex5@gmail.com")
(package
 (name wayland-proxy-virtwl)
 (synopsis "Proxy Wayland connections across the VM boundary")
 (depends
   (logs (>= 0.7.0))
   (cmdliner (>= 1.1.0))
   (cstruct (>= 6.2.0))
   (eio (>= 0.12))
   (eio_main (>= 1.1))
   (ppx_cstruct (>= 6.2.0))
   (ocaml (>= 5.1.0))
   (fmt (>= 0.8.9))
   conf-pkg-config
   (wayland (>= 2.0))))
