(library
  (name virtio_gpu)
  (foreign_stubs
    (language c)
    (names virtio_gpu_stubs)
    (flags (:standard (:include c_flags.sexp))))
  (libraries cstruct lwt.unix wayland)
  (c_library_flags (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action (run ./config/discover.exe)))
